@@ -15,6 +15,11 @@ $delete->photoid = $photoid;
 $photo = $delete->GetPhoto($delete->photoid);
 if (($photo->owner_guid == ossn_loggedin_user()->guid) || ossn_isAdminLoggedin()) {
     if ($delete->deleteProfilePhoto()) {
+		
+		$user = ossn_user_by_guid($photo->owner_guid);
+		$user->data->icon_time = false;
+		$user->save();
+		
         ossn_trigger_message(ossn_print('photo:deleted:success'), 'success');
         redirect("album/profile/{$photo->owner_guid}");
     } else {
